cargando las imagenes y estructura del usuario

--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
   <body>
     <div class="container">
       <aside>
-        <div class="content"></div>
+        <div class="content">
+          <div>
+            <div>
+              <div><img src="/sistema_mensajeria/assets/img/maria.jpg"</div>
+              <div>
+                <h2>MARIA</h2>
+                <p>Activa ahora</p>
+              </div>
+            </div>
+            <div></div>
+          </div>
+        </div>
       </aside>
+      
 
       <main></main>
     </div>
