--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Sistema_mensajeria</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container flex">
       <aside>
         <div class="content">
           <div>
